<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec327.caffiene.StartPage"
    android:background="#8d2853"
    android:clickable="false"
    android:focusable="true">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            android:hint="@string/name"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/choose_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:text="@string/choose_your_gender"
            android:prompt="@string/choose_your_gender"
            android:layout_below="@+id/age"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp"
            android:background="#64cb3d8e"
            android:spinnerMode="dialog" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weight"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:layout_below="@+id/name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/weight"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />


        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/age"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/age"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:onClick="submit"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#f4ccde" />


</RelativeLayout>
