<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec327.caffiene.Instructions"
    android:background="@drawable/background"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gohome"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:clickable="true"
        android:onClick="goHome"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/textView2"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:textSize="12dp"
        android:textColor="@color/white" />

</LinearLayout>
</ScrollView>