<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ec327.caffiene.AddDrink">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add A New Drink"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="42dp"
            android:layout_marginTop="42dp"
            android:hint="@string/search"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TimePicker
            android:id="@+id/time"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginTop="42dp"
            android:hint="@string/time"
            android:nestedScrollingEnabled="false"
            android:numbersBackgroundColor="@color/button"
            android:textAlignment="center"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="42dp"
            android:background="@color/button"
            android:clickable="true"
            android:onClick="addDrink"
            android:text="@string/add_drink"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:enabled="true"
            android:text="OR"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="42dp"
            android:background="@color/button"
            android:clickable="true"
            android:onClick="addCustom"
            android:text="@string/add_custom"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>
